--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,16 @@ jobs:
       - name: Build
         run: cmake --build build -j
 
-      # Opcional: executar binário com xvfb, se desejar rodar testes que abram janela
-      # - name: Run
-      #   run: |
-      #     sudo apt-get install -y xvfb
-      #     xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' ./build/woe3d
+      - name: Install doxygen
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y doxygen
+
+      - name: Generate docs (Doxygen)
+        run: doxygen ${GITHUB_WORKSPACE}/Doxyfile
+
+      - name: Upload docs artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docs-html
+          path: docs/html
